--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "pack:offline": "npm run build && cd dist && printf 'Open index.html in this folder to play.\n' > README-OFFLINE.txt && zip -r ../mman1130-quiz-offline.zip .",
     "lint": "eslint .",
     "preview": "vite preview"
   },
