--- a/.github/workflows/tauri-release.yml
+++ b/.github/workflows/tauri-release.yml
@@ -1,11 +1,42 @@
-name: Deprecated - Use Root Workflow
+name: Tauri Desktop Release
 
 on:
   workflow_dispatch: {}
+  push:
+    tags:
+      - 'v*'
 
 jobs:
-  noop:
-    runs-on: ubuntu-latest
+  build:
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [macos-latest, windows-latest]
+    runs-on: ${{ matrix.os }}
     steps:
-      - run: echo "This workflow is deprecated. Builds run from repo root .github/workflows/tauri-release.yml"
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@stable
+
+      - name: Install app dependencies
+        run: npm ci
+
+      - name: Build app with Tauri and create release
+        uses: tauri-apps/tauri-action@v0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          projectPath: .
+          tagName: v__VERSION__
+          releaseName: MMAN1130 Quiz v__VERSION__
+          releaseBody: 'Auto-generated release for MMAN1130 Quiz.'
+          releaseDraft: false
+          prerelease: false
 
